stages/stage7/k8s/apps/search/search-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: apollo11-apps
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
    - port: 8083
      targetPort: 8083
