stages/stage7/k8s/apps/search/search-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: search-allow-specific
  namespace: apollo11-apps
spec:
  podSelector:
    matchLabels:
      app: search
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apollo11-ui
      ports:
        - protocol: TCP
          port: 8083
